<resources>
    <string name="app_name">MediTime</string>
    <string name="meditime">MEDITIME</string>
    <string name="meditime_logo">Meditime Logo</string>
    <string name="startup_semi_circle">Startup Semi-circle</string>
    <string name="a_medication_management">A MEDICATION MANAGEMENT</string>
    <string name="get_started">Get Started</string>
    <string name="login_your_account">Login your account</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="login_to_your_account">LOG INTO YOUR ACCOUNT</string>
    <string name="set_you_pin">Set your PIN</string>
    <string name="pin_hint">0000</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>

    <!--  ERROR MESSAGE-->
    <string name="error_empty">* Fields can\'t be empty.</string>
    <string name="error_email">* Please enter a valid email address.</string>
    <string name="error_username">* Username already exists!</string>

    <!--  LOGIN ERROR  -->
    <string name="error_no_user">* This user doesn\'t exist. Please try again!</string>
    <string name="error_login">* Incorrect email or password.</string>

    <!--  SIGNUP ERROR  -->
    <string name="error_password">* Password doesn\'t match. Please try again!</string>
    <string name="error_weak_pass">* This password is too weak.</string>
    <string name="error_user_exist">* User already exists. Please use a different email address.</string>


    <string name="start_your_journey">Start your journey!</string>
    <string name="greet_user">Welcome, </string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="JM">Jose Emmanuel Villanueva \nJmspartan12345@gmail.com</string>
    <string name="DON">Don Patrick Iñigo \niñigodonpatrick@gmail.com</string>
    <string name="LHOYD">Lhoyd Andrew Bernabe \nandrewebernabe@gmail.com</string>
    <string name="ROCHE">Rochelle Cruz \ncruzrochelle503@gmail.com</string>
    <string name="SOPH">Sophia Granado \nsophia.granado12@gmail.com</string>

    <!--  SPINNER  -->
    <string-array name="tube">
        <item>-- Select Available Tube --</item>
        <item>Tube A</item>
        <item>Tube B</item>
        <item>Tube C</item>
        <item>Tube D</item>
        <item>Tube E</item>
    </string-array>

    <string-array name="days">
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
        <item>SUN</item>
    </string-array>
</resources>