<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light10"
    tools:context=".GetStarted">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/medi_logo"
                    android:layout_width="49dp"
                    android:layout_height="49dp"
                    android:contentDescription="@string/meditime_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo_colored"
                    android:elevation="4dp"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:fontFamily="@font/inter_extrabold"
                    android:text="@string/meditime"
                    android:textColor="@color/dark10"
                    android:textSize="36sp"
                    app:layout_constraintStart_toEndOf="@+id/medi_logo"
                    app:layout_constraintTop_toTopOf="@+id/medi_logo"
                    android:letterSpacing="0.1"
                    android:textAppearance="@style/shadow"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_medication_management"
                    android:textColor="@color/dark10"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@+id/medi_logo"
                    app:layout_constraintTop_toBottomOf="@+id/medi_logo"
                    android:fontFamily="@font/inter_bold"
                    android:letterSpacing="0.15"
                    android:textAppearance="@style/shadow"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>