<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login"
    android:background="@color/light10">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="243dp"
                    android:src="@drawable/semi_circle_deco"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/medi_logo"
                            android:layout_width="49dp"
                            android:layout_height="49dp"
                            android:contentDescription="@string/meditime_logo"
                            android:elevation="4dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/logo_colored" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="13dp"
                            android:fontFamily="@font/inter_extrabold"
                            android:letterSpacing="0.1"
                            android:text="@string/meditime"
                            android:textAppearance="@style/shadow"
                            android:textColor="@color/base"
                            android:textSize="36sp"
                            app:layout_constraintStart_toEndOf="@+id/medi_logo"
                            app:layout_constraintTop_toTopOf="@+id/medi_logo" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_bold"
                            android:letterSpacing="0.15"
                            android:text="@string/a_medication_management"
                            android:textAppearance="@style/shadow"
                            android:textColor="@color/base"
                            android:textSize="15sp"
                            app:layout_constraintStart_toStartOf="@+id/medi_logo"
                            app:layout_constraintTop_toBottomOf="@+id/medi_logo" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="91dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_your_account"
                    android:fontFamily="@font/inter_extrabold"
                    android:letterSpacing="0.05"
                    android:textSize="20sp"
                    android:textColor="@color/dark10"
                    style="@style/shadow"
                    />

                <TextView
                    android:id="@+id/logError"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/error_login"
                    android:textSize="11sp"
                    android:letterSpacing="0.05"
                    android:textColor="@color/error"
                    android:visibility="gone"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/emailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/light_bg"
                    android:ems="10"
                    android:fontFamily="@font/montserrat_bold"
                    android:hint="@string/email_address"
                    android:textColorHint="@color/dark20"
                    android:inputType="textEmailAddress"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:textColor="@color/dark10"
                    android:textSize="11sp"
                    android:letterSpacing="0.05"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/light_bg"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/dark20">

                    <EditText
                        android:id="@+id/passwordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:background="@drawable/light_bg"
                        android:ems="10"
                        android:fontFamily="@font/montserrat_bold"
                        android:hint="@string/password"
                        android:textColorHint="@color/dark20"
                        android:inputType="textPassword"
                        android:paddingStart="14dp"
                        android:paddingEnd="14dp"
                        android:textColor="@color/dark10"
                        android:textSize="11sp"
                        android:letterSpacing="0.05"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@color/transparent"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/forgot_password"
                    android:textAppearance="@style/shadow"
                    android:textSize="11sp"
                    android:layout_gravity="end"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="15dp"
                    android:letterSpacing="0.05"
                    android:textColor="@color/dark20" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="33dp"
                android:layout_marginHorizontal="30dp">

                <Button
                    android:id="@+id/logIn"
                    android:layout_width="280dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@drawable/buton"
                    style="@style/shadow"
                    android:fontFamily="@font/inter_extrabold"
                    android:letterSpacing="0.15"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textAppearance="@style/shadow"
                    android:textColor="@color/dark10"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/loginProgress"
                    android:layout_width="280dp"
                    android:layout_height="48dp"
                    android:background="@drawable/buton"
                    android:progressTint="@color/light"
                    android:paddingVertical="5dp"
                    android:elevation="4dp"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginVertical="21dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="134dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/arrow" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imageView3"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/circle" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/or"
                        android:textColor="@color/dark10"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView4"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/imageView4"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/circle" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="134dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/arrow" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/signupRedirect"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:elevation="4dp"
                    android:fontFamily="@font/inter_extrabold"
                    android:letterSpacing="0.15"
                    android:text="@string/create_account"
                    android:textAllCaps="true"
                    android:textAppearance="@style/shadow"
                    android:textColor="@color/dark10"
                    android:textSize="12sp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>