<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.UserAgreement"
    android:background="@color/light10">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="243dp"
                    android:src="@drawable/semi_circle_deco"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/medi_logo"
                            android:layout_width="49dp"
                            android:layout_height="49dp"
                            android:contentDescription="@string/meditime_logo"
                            android:elevation="4dp"
                            app:srcCompat="@drawable/logo_colored" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="13dp"
                            android:fontFamily="@font/inter_extrabold"
                            android:letterSpacing="0.1"
                            android:text="@string/meditime"
                            android:textAppearance="@style/shadow"
                            android:textColor="@color/base"
                            android:textSize="36sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_bold"
                            android:letterSpacing="0.15"
                            android:text="@string/a_medication_management"
                            android:textAppearance="@style/shadow"
                            android:textColor="@color/base"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="User Agreement"
                    android:fontFamily="@font/inter_extrabold"
                    android:letterSpacing="0.05"
                    android:textSize="20sp"
                    android:textColor="@color/dark10"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <View
                            android:id="@+id/view"
                            android:layout_width="match_parent"
                            android:layout_height="360dp" />
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="22dp">

                <Button
                    android:id="@+id/agreeBTN"
                    android:layout_width="280dp"
                    android:layout_height="48dp"
                    android:background="@drawable/buton"
                    android:elevation="4dp"
                    android:fontFamily="@font/inter_extrabold"
                    android:letterSpacing="0.15"
                    android:text="@string/create_account"
                    android:textAllCaps="true"
                    android:textAppearance="@style/shadow"
                    android:textColor="@color/dark10"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>